# ShuaForge

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.userscripts.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue_report.yml
.github/workflows/: android-build.yml  ci.yml  desktop-build.yml  issue-assistant.yml  pr-review.yml  release.yml
android/: README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zhongbai/shuaforge/: ShuaForgeActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/fonts/: README.md
examples/: ai-config.sample.json  problems.sample.csv  problems.sample.json
src/: ai.rs  ai_import.rs  app.rs  deck.rs  lan_sync.rs  lib.rs  logging.rs  main.rs  problem.rs  problem_export.rs  self_update.rs  store.rs  userscript_server.rs
src/app/: analysis_ui.rs  fonts.rs  layout.rs  library_cards.rs  markdown.rs  navigation.rs  practice_input.rs  preview.rs  settings_ui.rs  widgets.rs
src/core/: ai.rs  deck.rs  lan_sync.rs  mod.rs  problem.rs  problem_export.rs  store.rs  userscript_server.rs
src/desktop/: mod.rs
src/mobile/: android.rs  ios.rs  mod.rs
userscripts/src/: shuaforge-question-exporter.user.ts
