[package]
name = "shuaforge"
version = "0.1.5"
edition = "2024"
license = "MIT"

[lib]
name = "shuaforge_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22"
calamine = "0.31"
csv = "1.3"
dirs = "6.0"
eframe = { version = "0.32", default-features = false, features = ["android-native-activity", "default_fonts", "glow", "wayland", "x11"] }
fern = "0.7"
hex = "0.4"
log = "0.4"
minreq = { version = "2.14", features = ["https-rustls"] }
pdf-extract = "0.10"
rand = "0.9"
resvg = { version = "0.47", default-features = false, features = ["system-fonts", "text"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "local-offset"] }
ureq = { version = "3.1", features = ["json"] }
webbrowser = "1.0"
zip = { version = "4.3", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.22"

[profile.release]
opt-level = "z"
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
